<resources>
    <string name="app_name">Cabily</string>
    <string name="app_name_heading">CABILY</string>
    <string name="action_settings">Settings</string>
    <string name="action_signingIn">Signing In</string>
    <string name="action_signingUp">Signing Up</string>
    <string name="action_updating">Updating</string>
    <string name="action_logging_out">Logging Out</string>
    <string name="action_sending_invoice">Sending Invoice</string>
    <string name="action_processing">Processing</string>
    <string name="action_deleting">Deleting</string>
    <string name="action_success">Success</string>
    <string name="action_pleasewait">Please Wait...</string>
    <string name="action_loading">Loading</string>
    <string name="action_saving">Saving</string>
    <string name="action_error">Sorry</string>
    <string name="action_verifying">Verifying</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_ok">OK</string>
    <string name="fragment_edit">Edit</string>
    <string name="action_cancel_alert">CANCEL</string>
    <string name="alert_nointernet">No Internet Connection</string>
    <string name="alert_no_gps">GPS not Enabled !!!</string>
    <string name="forgotpassword">Please enter the email address of your account</string>
    <string name="alert_nointernet_message">You are offline please check your internet connection</string>
    <string name="alert_servererror">Server Error</string>
    <string name="alert_gpsEnable">Enable GPS to locate your location</string>
    <string name="alert_nocar">Sorry! We do not provide services in your city yet.</string>
    <string name="alert_update_location">Updating Your Location</string>
    <string name="action_session_expired_title">Session Expired</string>
    <string name="action_session_expired_message">Please re-login to renew your session</string>
    <string name="action_unable_to_create_map">Unable to create map. Install Google Play service To View Location !!!</string>
    <string name="signin_main_label_Signin">SIGN IN</string>
    <string name="signin_main_label_register">REGISTER</string>
    <string name="login_label">SIGN IN</string>
    <string name="login_label_forgotpwd">Forgot Password?</string>
    <string name="login_label_email_hint">Email Address</string>
    <string name="login_label_pwd_hint">Password</string>
    <string name="login_label_login">Sign In</string>
    <string name="login_label_alert_username">Email address can\'t be empty</string>
    <string name="login_label_alert_email_invalid">Email address is invalid</string>
    <string name="login_label_alert_password">Password can\'t be empty</string>
    <string name="login_label_alert_signIn_failed">Sign In Failed</string>
    <string name="login_label_facecook_login">Facebook Log in</string>
    <string name="login_label_facecook_login_app">Sign in with Facebook</string>
    <string name="login_label_facecook_login_re">Sign up with Facebook</string>
    <string name="login_label_or">OR</string>
    <string name="register_label">Register</string>
    <string name="register_label_email_hint">Email</string>
    <string name="register_label_email_me_hint">Email Me</string>
    <string name="register_label_pwd_hint">Password</string>
    <string name="register_label_cnf_pwd_hint">Confirm Password</string>
    <string name="register_label_username_hint">Name</string>
    <string name="register_label_phone_hint">Mobile Number</string>
    <string name="register_label_code_hint">Code</string>
    <string name="register_label_dummy_text">By Continuing , i agree Cabilys User Agreement and Terms of Services</string>
    <string name="login_label_privacypolicy">By Continuing, I agree Cabily\'s</string>
    <string name="login_label_Terms_of_service">User Agreement</string>
    <string name="login_label_and">and</string>
    <string name="login_label_Privacy_Policy">Terms of Services</string>
    <string name="register_label_referal_hint">Referral Code(Optional)</string>
    <string name="register_label_register">REGISTER</string>
    <string name="register_label_create_account">Create Account</string>
    <string name="register_label_alert_username">UserName can\'t be empty</string>
    <string name="register_label_alert_password">Password must be at least 6 characters.</string>
    <string name="register_label_alert_email">Email address is invalid</string>
    <string name="register_label_alert_email_register">Email should not empty</string>
    <string name="register_label_alertpassword_register">Password should not empty</string>
    <string name="register_label_alert_email_empty">Please Enter your Email</string>
    <string name="register_label_alert_phoneNo">Enter phone number between 6 to 15</string>
    <string name="register_label_alert_country_code">Enter country code</string>
    <string name="register_label_alert_pass_not_match">Password does not match</string>
    <string name="register_label_referal_schema">Referral Schema!</string>
    <string name="register_label_referal_ok">OK</string>
    <string name="register_label_referal_schema_content1">Enter a referral code here to earn free ride coupons.</string>
    <string name="register_label_referal_schema_content2">Note : Referral schema is only applicable for users who have never booked an Cabily cab before.</string>
    <string name="login_label_alert_register_failed">Registration Failed</string>
    <string name="otp_label_verification">Verify Mobile</string>
    <string name="otp_label_enter_otp">Enter OTP</string>
    <string name="otp_label_send">Submit</string>
    <string name="action_otp">Verifying</string>
    <string name="otp_label_alert_otp">OTP can\'t be empty</string>
    <string name="otp_label_alert_invalid">OTP is invalid</string>
    <string name="forgot_password_email_label_title">Forgot Password</string>
    <string name="forgot_password_email_label_enter_email">Email Address</string>
    <string name="forgot_password_email_label_send_email">E-mail Me</string>
    <string name="forgot_password_email_label_enter_valid_email">Email address is invalid</string>
    <string name="forgot_password_email_label_success">Verification code has been sent to your registered mobile number</string>
    <string name="reset_password_label_title">RESET PASSWORD</string>
    <string name="reset_password_label_email">Email Address</string>
    <string name="reset_password_label_enter_new_password">New Password</string>
    <string name="reset_password_label_show_password_text">Show Password</string>
    <string name="reset_password_email_label_enter_valid_email">Enter valid email</string>
    <string name="reset_password_email_label_enter_valid_password">Password can\'t be empty</string>
    <string name="navigation_label_bookmyride">Book My Ride</string>
    <string name="navigation_label_myride">My Rides</string>
    <string name="navigation_label_money">Cabily Money</string>
    <string name="navigation_label_invite">Invite &amp; Earn</string>
    <string name="navigation_label_ratecard">Rate Card</string>
    <string name="navigation_label_emergency">Emergency Contact</string>
    <string name="navigation_label_report_issue">Report Issues</string>
    <string name="navigation_label_feedback">Feedback</string>
    <string name="navigation_label_aboutus">About Us</string>
    <string name="action_email_toAddress">info@zoplay.com</string>
    <string name="home_label_ride_later">RIDE LATER</string>
    <string name="home_label_ride_now">RIDE NOW</string>
    <string name="home_label_cancel">CANCEL</string>
    <string name="home_label_confirm">CONFIRM</string>
    <string name="home_label_fromNow">from now</string>
    <string name="home_label_confirmation">CONFIRMATION</string>
    <string name="home_label_invalid_pickUp">Invalid pickup location</string>
    <string name="gps_label_title">Use Location?</string>
    <string name="gps_label_text1">This app wants to change your</string>
    <string name="gps_label_text2">device settings:</string>
    <string name="gps_label_text3">Use GPS,Wi-Fi and cell networks</string>
    <string name="gps_label_text4">for location</string>
    <string name="gps_label_no">No</string>
    <string name="gps_label_yes">Yes</string>
    <string name="alert_label_title">Sorry</string>
    <string name="alert_label_ok">OK</string>
    <string name="alert_label_content1">We could not accept your request</string>
    <string name="alert_label_content2">No cabs has been available at your place. Kindly try again after sometime</string>
    <string name="alert_label_ridelater_title">Invalid pickup time</string>
    <string name="alert_label_ridelater_content">Please make sure that pickup time is at least after an hour from now</string>
    <string name="ridenow_label_ratecard">Rate Card</string>
    <string name="ridenow_label_estimate">Get Estimate Fare</string>
    <string name="ridenow_label_enter_drop_loc">Enter Drop Location</string>
    <string name="ridenow_label_coupon">Apply Coupon</string>
    <string name="ridenow_label_cartype">Car Type</string>
    <string name="ridenow_no_driver">No Driver Available, Please Select other Category</string>
    <string name="ridenow_label_available_wallet_amount">Your Wallet :</string>
    <string name="ridenow_label_pickup_time">Pickup Time</string>
    <string name="ridenow_label_confirm_success">Your booking has been successfully registered. Our driver will contact you soon.</string>
    <string name="ratecard_label_fare">Fare Breakup</string>
    <string name="ratecard_label_ok">OK</string>
    <string name="couponcode_label_title">Enter Coupon Code</string>
    <string name="couponcode_label_apply">APPLY</string>
    <string name="couponcode_label_remove">CLEAR</string>
    <string name="couponcode_label_cancel">CANCEL</string>
    <string name="couponcode_label_verifying">Verifying...</string>
    <string name="couponcode_label_verifed">Verified</string>
    <string name="couponcode_label_invalid_code">Invalid coupon code</string>
    <string name="couponcode_label_empty_code">Empty coupon code</string>
    <string name="couponcode_label_allowance_text1">You have successfully applied coupon code and </string>
    <string name="couponcode_label_allowance_text2">% will be deducted from your total amount.</string>
    <string name="couponcode_label_allowance_text3"> will be deducted from your total amount.</string>
    <string name="couponcode_label_allowance">Your Allowance</string>
    <string name="couponcode_allowance_type">Percent</string>
    <string name="timer_label_alert_retry">Retry</string>
    <string name="timer_label_alert_cancel">Cancel</string>
    <string name="timer_label_alert_sorry">Sorry!</string>
    <string name="timer_label_alert_content">No driver available </string>
    <string name="timer_label">We are searching driver for you, \n be relax!</string>
    <string name="timer_label_cancel_ride">Cancelling your ride</string>
    <string name="timer_label_alert_yes">YES</string>
    <string name="timer_label_alert_no">NO</string>
    <string name="timer_label_alert_cancel_ride">Cancel Ride</string>
    <string name="timer_label_alert_cancel_ride_message">Are your sure you want to cancel this ride?</string>
    <string name="track_your_ride_label_cancelRide">Cancel Ride</string>
    <string name="track_your_ride_label_track">TRACK YOUR RIDE</string>
    <string name="track_your_ride_label_done">Done</string>
    <string name="track_your_ride_label_callDriver">CONTACT</string>
    <string name="track_your_ride_label_endTrip">CANCEL</string>
    <string name="my_rides_header_textview">MY RIDES</string>
    <string name="my_rides_all">ALL RIDES</string>
    <string name="my_rides_upcoming">UPCOMING</string>
    <string name="my_rides_completed">COMPLETED</string>
    <string name="my_rides_no_ride_yet">No Rides Booked!</string>
    <string name="sms_masking_text">Enter your text</string>
</resources>